--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-4">
         <!-- Logo -->
-        <img src="your-logo.png" alt="Your Logo" class="w-32 h-auto">
+        <img src="665b755d2fdf4115427bd53d_Typeface-White.png" alt="Your Logo" class="w-32 h-auto">
       </div>
       <div class="hidden md:flex space-x-8">
         <a href="#features" class="hover:text-white-300 transition">Features</a>
@@ -119,7 +119,7 @@
 
     <!-- Illustration Section (moved below on smaller screens) -->
     <div class="w-full md:w-1/2 mt-8 md:mt-0">
-      <img src="illustration.png" alt="Illustration" class="w-full h-auto">
+      <img src="image.png" alt="Illustration" class="w-full h-auto">
     </div>
   </div>
 </header>
